# IntelliCV

./: .env.example  .gitignore  CHANGELOG.md  CONFIG_GUIDE.md  CONTRIBUTING.md  CV_JUDGE_README.md  DEPLOYMENT.md  README.md  SCRAPING_GUIDE.md  cv.py  cv_config.example.md  cvb.bat  cvb.sh  install_cli.py  pyproject.toml  repos.txt  requirements.txt  run.bat  run.ps1  run.sh  sample_cv.json
cli/: README.md  package-lock.json  package.json
cli/src/: chatbot.js  handlers.js  index.js  python-bridge.js  theme.js  ui.js  utils.js
script_files/: docx_to_text.py
scripts/: docx_to_json.py
src/: change_tracker.py  cli.py  config.py  config_parser.py  consensus_aggregator.py  content_ingestor.py  content_optimizer.py  cv_config.py  cv_judge.py  cv_schema.py  cv_to_json.py  docx_analyzer.py  docx_builder.py  docx_metrics.py  github_readmes.py  impact_translator.py  intelligent_builder.py  job_scraper.py  judge_models.py  judge_orchestrator.py  main.py  review_system.py  tailoring.py  utils.py
